# pfu

./: Cargo.toml  README.md
.github/workflows/: build.yml
libabbs/: Cargo.toml  Justfile  README.md
libabbs/examples/: apml-emit-bench.rs  apml-emit.rs  apml-eval-bench.rs  apml-eval.rs  apml-lex-bench.rs  apml-lex.rs
libabbs/src/: lib.rs
libabbs/src/apml/: ast.rs  editor.rs  eval.rs  glob.rs  lst.rs  mod.rs  parser.rs  pattern.rs  tree.rs
libabbs/src/apml/value/: array.rs  mod.rs  union.rs
libabbs/src/tree/: mod.rs
libabbs/testrepo/app-admin/test1/autobuild/: defines
libabbs/testrepo/app-admin/test2/: spec
libabbs/testrepo/app-admin/test2/01-host/: defines
libabbs/testrepo/app-admin/test2/02-guest/: defines
libpfu/: Cargo.toml  README.md
libpfu-fixers/: Cargo.toml
libpfu-fixers/src/: fish_shell.rs  lib.rs  pep517.rs
libpfu-fixers/src/python/: dependency.rs  deps.rs  depsolver.rs  mod.rs  pep517.rs
libpfu-logdbg/: Cargo.toml
libpfu-logdbg/src/: lib.rs
libpfu-source/: Cargo.toml
libpfu-source/src/: lib.rs  pypi.rs
libpfu-style/: Cargo.toml
libpfu-style/src/: archgroup.rs  chkupd.rs  empty_line.rs  lib.rs  sources.rs  spacing.rs
libpfu/src/: absets.rs  apml.rs  lib.rs  message.rs  session.rs
libpfu/src/context/: mod.rs  source.rs
libpfu/src/source/: mod.rs
libpfu/testdata/: example
pakfixer/: Cargo.toml
pakfixer/src/: linters.rs  logger.rs  main.rs  selector.rs
