[workspace]
resolver = "2"
members = ["libabbs", "libpfu", "libpfu-fixers", "libpfu-logdbg", "libpfu-source", "libpfu-style", "pakfixer"]

[workspace.package]
authors = ["xtex <xtex@aosc.io>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/xtexChooser/pfu"
repository = "https://github.com/xtexChooser/pfu.git"
