[workspace]
resolver = "2"
members = ["libabbs", "libpfu", "libpfu-fixers", "libpfu-logdbg", "libpfu-source", "libpfu-style", "pakfixer"]

[workspace.package]
authors = ["xtex <xtex@aosc.io>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/AOSC-Dev/pfu"
repository = "https://github.com/AOSC-Dev/pfu.git"

[workspace.metadata.release]
pre-release-commit-message = "{{crate_name}}: release {{version}}"
tag-message = "{{crate_name}}: release {{version}}"
tag-name = "{{crate_name}}-{{version}}"
consolidate-commits = false
allow-branch = ["main"]
sign-commit = true
sign-tag = true
