[package]
name = "libabbs"
version = "0.1.2"
edition = "2024"
description = "Library for aosc-os-abbs maintenance"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kstring = "2.0.2"
nom = { version = "7.1.3", optional = true }
regex = { version = "1.11.1", optional = true }
thiserror = "2.0.9"

[features]
default = ["apml", "tree"]
apml = ["dep:nom", "dep:regex"]
tree = []
