[package]
name = "libpfu-fixers"
version = "0.1.0"
edition = "2024"
description = "Source-code analysis based lints for libPFU"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
itertools = "0.14.0"
libabbs = { version = "0.1.0", path = "../libabbs" }
libpfu = { version = "0.1.0", path = "../libpfu" }
log = "0.4.25"
oma-contents = { version = "0.16.0", features = ["aosc"] }
opendal = "0.51.1"
reqwest = { version = "0.12.9", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
