[package]
name = "libpfu-fixers"
version = "0.1.3"
edition = "2024"
description = "Source-code analysis based lints for libPFU"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
kstring = "2.0.2"
libabbs = { version = "0.1.7", path = "../libabbs" }
libpfu = { version = "0.1.5", path = "../libpfu" }
log = "0.4.27"
oma-contents = { version = "0.17.1", features = ["aosc"] }
opendal = "0.53.1"
reqwest = { version = "0.12.15", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
