[package]
name = "libpfu-logdbg"
version = "0.1.1"
edition = "2024"
description = "Build-log analysis based lints for libPFU"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
libabbs = { version = "0.1.6", path = "../libabbs" }
libpfu = { version = "0.1.4", path = "../libpfu" }
log = "0.4.25"
opendal = "0.52.0"
reqwest = { version = "0.12.9", default-features = false }
