[package]
name = "libpfu-logdbg"
version = "0.1.3"
edition = "2024"
description = "Build-log analysis based lints for libPFU"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
libabbs = { version = "0.1.8", path = "../libabbs" }
libpfu = { version = "0.1.7", path = "../libpfu" }
log = "0.4.27"
opendal = "0.54.0"
reqwest = { version = "0.12.22", default-features = false }
