[package]
name = "libpfu-source"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
bzip2 = { version = "0.5.0", features = ["libbz2-rs-sys"] }
flate2 = "1.0.35"
futures = "0.3.31"
libabbs = { version = "0.1.0", path = "../libabbs" }
log = "0.4.25"
opendal = { version = "0.51.1", features = ["services-github"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tar = { version = "0.4.43", default-features = false }
tempfile = "3.15.0"
xz2 = "0.1.7"
zstd = "0.13.2"
