[package]
name = "libpfu-source"
version = "0.2.5"
edition = "2024"
description = "Source-code VFS resolver for ABBS scripts"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
bzip2 = "0.6.0"
flate2 = "1.1.2"
futures = "0.3.31"
libabbs = { version = "0.1.8", path = "../libabbs" }
log = "0.4.27"
opendal = { version = "0.54.0", features = ["services-github"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tar = { version = "0.4.44", default-features = false }
tempfile = "3.20.0"
xz2 = "0.1.7"
zstd = "0.13.3"
