[package]
name = "libpfu-style"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
libabbs = { version = "0.1.0", path = "../libabbs" }
libpfu = { version = "0.1.0", path = "../libpfu" }
opendal = "0.51.1"
reqwest = { version = "0.12.9", default-features = false }
