[package]
name = "libpfu-style"
version = "0.1.0"
edition = "2024"
description = "Code style lints for libPFU"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
itertools = "0.14.0"
libabbs = { version = "0.1.2", path = "../libabbs" }
libpfu = { version = "0.1.0", path = "../libpfu" }
log = "0.4.25"
opendal = "0.51.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false }
