[package]
name = "libpfu-style"
version = "0.1.3"
edition = "2024"
description = "Code style lints for libPFU"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
itertools = "0.14.0"
kstring = "2.0.2"
libabbs = { version = "0.1.8", path = "../libabbs" }
libpfu = { version = "0.1.6", path = "../libpfu" }
log = "0.4.27"
opendal = "0.53.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false }
