[package]
name = "libpfu"
version = "0.1.0"
edition = "2024"
description = "PackFixerUpper: bring up AOSC OS packages magically"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
futures = "0.3.31"
kstring = "2.0.2"
libabbs = { version = "0.1.1", path = "../libabbs" }
libpfu-source = { version = "0.2.0", path = "../libpfu-source" }
log = "0.4.25"
opendal = "0.51.1"
ouroboros = "0.18.5"
parking_lot = "0.12.3"
tokio = { version = "1.43.0", features = ["sync"] }
