[package]
name = "libpfu"
version = "0.1.4"
edition = "2024"
description = "PackFixerUpper: bring up AOSC OS packages magically"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
futures = "0.3.31"
kstring = { version = "2.0.2", features = ["serde"] }
libabbs = { version = "0.1.6", path = "../libabbs" }
libpfu-source = { version = "0.2.2", path = "../libpfu-source" }
log = "0.4.25"
opendal = "0.52.0"
ouroboros = "0.18.5"
parking_lot = "0.12.3"
reqwest = "0.12.12"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["sync"] }
