[package]
name = "libpfu"
version = "0.1.6"
edition = "2024"
description = "PackFixerUpper: bring up AOSC OS packages magically"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3.31"
kstring = { version = "2.0.2", features = ["serde"] }
libabbs = { version = "0.1.8", path = "../libabbs" }
libpfu-source = { version = "0.2.5", path = "../libpfu-source" }
log = "0.4.27"
opendal = "0.54.0"
ouroboros = "0.18.5"
parking_lot = "0.12.4"
reqwest = "0.12.22"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["sync"] }
