[package]
name = "pakfixer"
version = "0.1.4"
edition = "2024"
description = "Command-line interface for libpfu"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
console = "0.16.0"
kstring = "2.0.2"
libabbs = { version = "0.1.8", path = "../libabbs" }
libpfu = { version = "0.1.7", path = "../libpfu" }
libpfu-fixers = { version = "0.1.4", path = "../libpfu-fixers" }
libpfu-logdbg = { version = "0.1.3", path = "../libpfu-logdbg" }
libpfu-style = { version = "0.1.4", path = "../libpfu-style" }
log = { version = "0.4.27", features = ["std", "max_level_debug", "release_max_level_info"] }
rayon = "1.10.0"
regex = "1.11.1"
tokio = { version = "1.46.1", features = ["full"] }
